@@ -10,6 +10,6 @@ public class FooTests {
         String result = Foo.generateHtml("hello");
         Path path = Paths.get("generated.html");
         Files.write(path, result.getBytes());
-        assertEquals("<h1>hello</h1>", new String(Files.readAllBytes(path)));
+        assertEquals("<h1>hello</h1>", Files.readString(path));
     }
 }
